--- a/.github/workflows/trigger-gitlab-pipeline.yml
+++ b/.github/workflows/trigger-gitlab-pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Permet de déclencher le workflow via l'API
+  workflow_dispatch:
 
 jobs:
   trigger_gitlab_pipeline:
@@ -18,7 +18,34 @@ jobs:
 
       - name: Trigger GitLab Pipeline
         run: |
-          curl --request POST \
-          --form "ref=main" \
-          --form "token=${{ secrets.GITLAB_TOKEN }}" \
-          "https://gitlab.com/api/v4/projects/${{ secrets.GITLAB_PROJECT_ID }}/trigger/pipeline"
+          RESPONSE=$(curl --silent --request POST \
+            --form "ref=main" \
+            --form "token=${{ secrets.GITLAB_TOKEN }}" \
+            "https://gitlab.com/api/v4/projects/${{ secrets.GITLAB_PROJECT_ID }}/trigger/pipeline")
+          PIPELINE_ID=$(echo "$RESPONSE" | jq -r '.id')
+
+          if [ "$PIPELINE_ID" == "null" ]; then
+            echo "Échec du déclenchement du pipeline GitLab"
+            exit 1
+          fi
+
+          echo "Pipeline GitLab déclenché avec succès ! ID: $PIPELINE_ID"
+          echo "PIPELINE_ID=$PIPELINE_ID" >> $GITHUB_ENV
+
+      - name: Monitor GitLab Pipeline Status
+        run: |
+          STATUS="running"
+          while [[ "$STATUS" == "running" || "$STATUS" == "pending" ]]; do
+            sleep 10
+            RESPONSE=$(curl --silent --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
+              "https://gitlab.com/api/v4/projects/$GITLAB_PROJECT_ID/pipelines/$PIPELINE_ID")
+            STATUS=$(echo "$RESPONSE" | jq -r '.status')
+            echo "Statut actuel du pipeline: $STATUS"
+          done
+
+          if [ "$STATUS" == "success" ]; then
+            echo "Le pipeline GitLab a réussi ✅"
+          else
+            echo "Le pipeline GitLab a échoué ❌"
+            exit 1
+          fi
