--- a/.github/workflows/trigger-gitlab-pipeline.yml
+++ b/.github/workflows/trigger-gitlab-pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  workflow_dispatch:  # Permet de déclencher le workflow via l'API
 
 jobs:
   trigger_gitlab_pipeline:
@@ -18,10 +18,13 @@ jobs:
 
       - name: Trigger GitLab Pipeline
         run: |
+          # Déclenche le pipeline GitLab
           RESPONSE=$(curl --silent --request POST \
             --form "ref=main" \
             --form "token=${{ secrets.GITLAB_TOKEN }}" \
             "https://gitlab.com/api/v4/projects/${{ secrets.GITLAB_PROJECT_ID }}/trigger/pipeline")
+          
+          # Récupère l'ID du pipeline
           PIPELINE_ID=$(echo "$RESPONSE" | jq -r '.id')
 
           if [ "$PIPELINE_ID" == "null" ]; then
@@ -37,6 +40,7 @@ jobs:
           STATUS="running"
           while [[ "$STATUS" == "running" || "$STATUS" == "pending" ]]; do
             sleep 10
+            # Vérifie le statut du pipeline
             RESPONSE=$(curl --silent --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
               "https://gitlab.com/api/v4/projects/$GITLAB_PROJECT_ID/pipelines/$PIPELINE_ID")
             STATUS=$(echo "$RESPONSE" | jq -r '.status')
