--- a/.github/workflows/trigger-gitlab-pipeline.yml
+++ b/.github/workflows/trigger-gitlab-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
           echo "Pipeline GitLab déclenché avec succès ! ID: $PIPELINE_ID"
           echo "PIPELINE_ID=$PIPELINE_ID" >> $GITHUB_ENV
 
-      - name: Monitor GitLab Pipeline Status
+      - name: Monitor GitLab Pipeline Status and Display All Information
         run: |
           STATUS="created"
           while [[ "$STATUS" == "created" || "$STATUS" == "pending" || "$STATUS" == "running" ]]; do
@@ -48,7 +48,29 @@ jobs:
             RESPONSE=$(curl --silent --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
               "https://gitlab.com/api/v4/projects/$GITLAB_PROJECT_ID/pipelines/$PIPELINE_ID")
             STATUS=$(echo "$RESPONSE" | jq -r '.status')
+            
+            # Affichage des détails du pipeline
             echo "Statut actuel du pipeline: $STATUS"
+            echo "ID du pipeline: $(echo "$RESPONSE" | jq -r '.id')"
+            echo "Référence du pipeline: $(echo "$RESPONSE" | jq -r '.ref')"
+            echo "SHA du commit: $(echo "$RESPONSE" | jq -r '.sha')"
+            echo "Statut du pipeline: $STATUS"
+            echo "URL Web du pipeline: $(echo "$RESPONSE" | jq -r '.web_url')"
+            echo "Créé à: $(echo "$RESPONSE" | jq -r '.created_at')"
+            echo "Mis à jour à: $(echo "$RESPONSE" | jq -r '.updated_at')"
+            echo "Utilisateur: $(echo "$RESPONSE" | jq -r '.user.name')"
+            echo "Nom d'utilisateur: $(echo "$RESPONSE" | jq -r '.user.username')"
+            echo "Propriétaire du pipeline: $(echo "$RESPONSE" | jq -r '.project.name')"
+            echo "Projet: $(echo "$RESPONSE" | jq -r '.project.path_with_namespace')"
+            echo "Avant SHA: $(echo "$RESPONSE" | jq -r '.before_sha')"
+            echo "Tag: $(echo "$RESPONSE" | jq -r '.tag')"
+
+            # Affiche les jobs du pipeline
+            JOBS=$(curl --silent --header "PRIVATE-TOKEN: $GITLAB_TOKEN" \
+              "https://gitlab.com/api/v4/projects/$GITLAB_PROJECT_ID/pipelines/$PIPELINE_ID/jobs")
+            echo "Liste des jobs dans le pipeline:"
+            echo "$JOBS" | jq -r '.[] | "\(.name) - \(.status)"'
+
           done
 
           if [ "$STATUS" == "success" ]; then
